# botnet

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
botnet/: Cargo.toml
botnet/src/: bay.rs  compute_bot_action.rs  config.rs  game.rs  lib.rs  main.rs  partial_entity.rs  replay.rs  wasm_context.rs  wasm_engine.rs
botnet/src/bot_actions/: build_entity.rs  deposit_resource.rs  harvest_resource.rs  log_debug.rs  mod.rs  move_towards.rs  withdraw_resource.rs
botnet_api/: Cargo.toml  LICENSE.txt
botnet_api/botnet_api_derive/: Cargo.toml
botnet_api/botnet_api_derive/src/: lib.rs
botnet_api/src/: api.rs  entity_helpers.rs  lib.rs  pathfinding.rs
botnet_api_derive/src/: lib.rs
botnet_replay_viewer/: Cargo.toml
botnet_replay_viewer/src/: animation.rs  bay_renderer.rs  bot_action_animations.rs  main.rs  render.rs  tooltip_renderer.rs
botnet_replay_viewer/src/animation/: bot_harvest_resource.rs  bot_move_towards.rs  mod.rs
example_bot/: Cargo.toml
example_bot/src/: lib.rs
src/: bay.rs  bot.rs  bot_action.rs  bot_compute_action.rs  compute_bot_action.rs  game.rs  main.rs
src/bot_actions/: harvest_resource.rs  mod.rs  move_towards.rs
